Issue-47: made scrollbar visible

--- a/narratives/static/custom.css
+++ b/narratives/static/custom.css
@@ -56,7 +56,7 @@
 }
 
 html, body {
-    overflow:hidden;
+    overflow:visible;
 }
 
 .tab-content {
